# ChangeLog for app-misc/cl-kde-meta
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*cl-kde-meta-4.7.0-r4 (23 Nov 2011)

  23 Nov 2011; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
  -cl-kde-meta-4.7.0-r3.ebuild, +cl-kde-meta-4.7.0-r4.ebuild:
  add kde-misc/synaptiks

*cl-kde-meta-4.7.0-r3 (29 Aug 2011)
*cl-kde-meta-4.6.0-r6 (29 Aug 2011)

  29 Aug 2011; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
  -cl-kde-meta-4.6.0-r4.ebuild, cl-kde-meta-4.6.0-r5.ebuild,
  +cl-kde-meta-4.6.0-r6.ebuild, -cl-kde-meta-4.7.0-r2.ebuild,
  +cl-kde-meta-4.7.0-r3.ebuild:
  remote kde-base/krfb

*cl-kde-meta-4.7.0-r2 (23 Aug 2011)

  23 Aug 2011; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
  -cl-kde-meta-4.7.0-r1.ebuild, +cl-kde-meta-4.7.0-r2.ebuild:
  remove kget

*cl-kde-meta-4.7.0-r1 (15 Aug 2011)

  15 Aug 2011; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
  -cl-kde-meta-4.7.0.ebuild, +cl-kde-meta-4.7.0-r1.ebuild:
  Add kde-base/kdepim-l10n

*cl-kde-meta-4.7.0 (28 Jul 2011)

  28 Jul 2011; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
  +cl-kde-meta-4.7.0.ebuild:
  Add kde 4.7.0

*cl-kde-meta-4.6.0-r2 (10 Jun 2011)

  10 Jun 2011; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
  +cl-kde-meta-4.6.0-r2.ebuild:
  Add kdepim 4.6.0 support

*cl-kde-meta-4.6.0-r1 (09 Feb 2011)

  09 Feb 2011; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
  -cl-kde-meta-4.6.0.ebuild, +cl-kde-meta-4.6.0-r1.ebuild:
  Add konqueror.

*cl-kde-meta-4.6.0 (01 Feb 2011)

  01 Feb 2011; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
  +cl-kde-meta-4.6.0.ebuild:
  Version bump

*cl-kde-meta-4.5.1-r2 (17 Dec 2010)

  17 Dec 2010; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
  -cl-kde-meta-4.5.1-r1.ebuild,
  +cl-kde-meta-4.5.1-r2.ebuild:
  Added localization for kdepim

*cl-kde-meta-4.5.1-r1 (24 Nov 2010)

  24 Nov 2010; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
  -cl-kde-meta-4.5.1.ebuild, +cl-kde-meta-4.5.1-r1.ebuild: