@@ -1,0 +1,8 @@
+~app-misc/cl-kde-meta-4.8.0 amd64 x86
+
+~dev-libs/soprano-2.7.4 amd64 x86
+~sys-auth/polkit-qt-0.103.0 amd64 x86
+~media-libs/libdmtx-0.7.4 amd64 x86
+~app-office/akonadi-server-1.7.0 amd64 x86
+~media-libs/prison-1.0 amd64 x86
+
