@@ -1,17 +1,11 @@
 #default
 ~media-sound/amarok-2.5.0 x86 amd64
-~net-im/choqok-1.2 amd64 x86
-~app-arch/p7zip-9.13 amd64 x86
 
 ~kde-misc/synaptiks-0.8.0 amd64 x86
 ~dev-python/pyudev-0.13 amd64 x86
 
 #for KDE 4.5.4
 ~media-gfx/exiv2-0.21.1 amd64 x86
-
-# for KDE 4.7
-~app-misc/cl-kde-meta-4.7.0 amd64 x86
-~dev-libs/shared-desktop-ontologies-0.8.1 amd64 x86
 
 ~media-gfx/digikam-2.5.0 amd64 x86
 ~media-plugins/kipi-plugins-2.5.0 amd64 x86
