@@ -1,6 +1,12 @@
 # ChangeLog for app-misc/cl-kde-meta
-# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+*cl-kde-meta-4.8.0 (28 Jan 2012)
+
+  28 Jan 2012; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
+  cl-kde-meta-4.7.0-r4.ebuild, +cl-kde-meta-4.8.0.ebuild:
+  version bump
 
 *cl-kde-meta-4.7.0-r4 (23 Nov 2011)
 
